<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inici"
        android:icon="@drawable/ic_inici_24dp"
        android:title="@string/title_inici" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_24dp"
        android:title="@string/title_perfil" />

    <item
        android:id="@+id/navigation_cobrament"
        android:icon="@drawable/ic_cobrament_qr_code_24dp"
        android:title="@string/title_cobrament" />

    <item
        android:id="@+id/navigation_escanejar"
        android:icon="@drawable/ic_qr_code_escaner_24dp"
        android:title="@string/title_escanejar" />

    <item
        android:id="@+id/navigation_historial"
        android:icon="@drawable/ic_historial_24dp"
        android:title="@string/title_historial" />

</menu>