<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inici">

    <fragment
        android:id="@+id/navigation_inici"
        android:name="com.example.corn_app_grupo6.ui.inici.IniciFragment"
        android:label="@string/title_inici"
        tools:layout="@layout/fragment_inici" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.corn_app_grupo6.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_cobrament"
        android:name="com.example.corn_app_grupo6.ui.cobrament.CobramentFragment"
        android:label="@string/title_cobrament"
        tools:layout="@layout/fragment_cobrament" />

    <fragment
        android:id="@+id/navigation_escanejar"
        android:name="com.example.corn_app_grupo6.ui.escanejar.EscanejarFragment"
        android:label="@string/title_escanejar"
        tools:layout="@layout/fragment_escanejar" />

    <fragment
        android:id="@+id/navigation_historial"
        android:name="com.example.corn_app_grupo6.ui.historial.HistorialFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/fragment_historial" />
</navigation>